<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="myrms.myrmstrings.jakubmajchrzak.example.TrumpetII">

    <TextView
        android:id="@+id/tvTrmptII"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Trąbka II" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="13dp" />

    <TextView
        android:id="@+id/tvChooseSong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/choose_song_comm"
        android:textSize="30dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="14dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btDuszoMaPanaChwal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/duszo_ma" />

            <Button
                android:id="@+id/btGenesis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genesis" />

            <Button
                android:id="@+id/btHejJezu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hej_jezu" />

            <Button
                android:id="@+id/btIdz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/idz" />

            <Button
                android:id="@+id/btJakDobrze"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jak_dobrze" />

            <Button
                android:id="@+id/btKazdyWschod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kazdy_wschod" />

            <Button
                android:id="@+id/btNadejdzie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nadejdzie_dzien" />

            <Button
                android:id="@+id/btPanieTwaDobroc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/panie_twa" />

            <Button
                android:id="@+id/btPrzyjdzJakDeszcz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/przyjdz_jak" />

            <Button
                android:id="@+id/btSandaly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sandaly" />

            <Button
                android:id="@+id/btStojeDzis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stoje_dzis" />

            <Button
                android:id="@+id/btToKrol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_krol" />

            <Button
                android:id="@+id/btUWielbiamy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uwielbiamy" />

            <Button
                android:id="@+id/btWierzycJakPiotr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wierzyc_jak" />

            <Button
                android:id="@+id/btWykrzykujcie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Wykrzykujcie na Cześć Pana" />

            <Button
                android:id="@+id/btZbawca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zbawca" />

            <Button
                android:id="@+id/btZiemia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ziemia" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
